# dsrs

./: .gitignore  Cargo.toml
crates/dsrs-core/: Cargo.toml
crates/dsrs-core/examples/: signature.rs
crates/dsrs-core/src/: lib.rs
crates/dsrs-core/src/adapters/: chat_adapter.rs  json_adapter.rs  mod.rs  schema_parser.rs  traits.rs  utils.rs
crates/dsrs-core/src/predict/: predict.rs
crates/dsrs-core/src/primatives/: mod.rs  module.rs  signature.rs  specials.rs
crates/dsrs-core/src/providers/: error.rs  mod.rs  models.rs  openai.rs  traits.rs
crates/dsrs-core/tests/: adapter.rs  signature.rs
py-dsrs/: Cargo.toml  pyproject.toml
py-dsrs/src/: lib.rs
