[package]
name = "dsrs-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-openai = "0.29.0"
async-trait = "0.1.88"
lazy_static = "1.4"
regex = "1.10"
schemars = { version = "1.0.4", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }

[dev-dependencies]
insta = { version = "1.34", features = ["json", "serde"] }
